tests/baselines/reference/emitArrowFunctionES6(strict=true).errors.txt
emitArrowFunctionES6.ts(3,33): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
emitArrowFunctionES6.ts(10,12): error TS7031: Binding element 'a' implicitly has an 'any' type.
emitArrowFunctionES6.ts(12,14): error TS7031: Binding element 'a' implicitly has an 'any' type.
emitArrowFunctionES6.ts(13,17): error TS7031: Binding element 'a' implicitly has an 'any' type.
emitArrowFunctionES6.ts(15,13): error TS7031: Binding element 'a' implicitly has an 'any' type.
emitArrowFunctionES6.ts(16,18): error TS7031: Binding element 'b' implicitly has an 'any' type.
emitArrowFunctionES6.ts(19,15): error TS7031: Binding element 'value' implicitly has an 'any' type.
emitArrowFunctionES6.ts(19,22): error TS7031: Binding element 'done' implicitly has an 'any' type.


==== emitArrowFunctionES6.ts (8 errors) ====
    var f1 = () => { }
    var f2 = (x: string, y: string) => { }
    var f3 = (x: string, y: number, ...rest) => { }
                                    ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    var f4 = (x: string, y: number, z=10) => { }
    function foo(func: () => boolean) { }
    foo(() => true);
    foo(() => { return false; });
    
    // Binding patterns in arrow functions
    var p1 = ([a]) => { };
               ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
    var p2 = ([...a]) => { };
    var p3 = ([, a]) => { };
                 ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
    var p4 = ([, ...a]) => { };
                    ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
    var p5 = ([a = 1]) => { };
    var p6 = ({ a }) => { };
                ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
    var p7 = ({ a: { b } }) => { };
                     ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
    var p8 = ({ a = 1 }) => { };
    var p9 = ({ a: { b = 1 } = { b: 1 } }) => { };
    var p10 = ([{ value, done }]) => { };
                  ~~~~~
!!! error TS7031: Binding element 'value' implicitly has an 'any' type.
                         ~~~~
!!! error TS7031: Binding element 'done' implicitly has an 'any' type.
    